--- a/test/index.html
+++ b/test/index.html
@@ -22,15 +22,15 @@
           <div class="header_text menu_item">
             <span class="item_text">HOME</span>
           </div>
-          <div class="header_text menu_item">
+          <a class="header_text menu_item" href="#about_us">
             <span class="item_text">ABOUT</span>
-          </div>
+          </a>
           <div class="header_text menu_item">
             <span class="item_text">TEAM</span>
           </div>
-          <div class="header_text menu_item">
+          <a class="header_text menu_item" href="#booking">
             <span class="item_text">BOOKING</span>
-          </div>
+          </a>
           <div class="header_text header_img">
             <img src="images/Vector.svg" />
           </div>
@@ -40,12 +40,12 @@
           <div class="header_text menu_item">
             <span class="item_text">GALERIE</span>
           </div>
-          <div class="header_text menu_item">
+          <a class="header_text menu_item" href="#events">
             <span class="item_text">EVENTS</span>
-          </div>
-          <div class="header_text menu_item">
+          </a>
+          <a class="header_text menu_item" href="#contact">
             <span class="item_text">CONTACT</span>
-          </div>
+          </a>
         </div>
         <div class="header_text restaurant_text">restaurant</div>
         <div class="header_text name_organization">FANCY SAILOR</div>
@@ -57,6 +57,7 @@
       </div>
 
       <div class="center_content_block about_us">
+        <a name="about_us"></a>
         <div class="about_us_block">
           <div class="subtitle black">ABOUT US</div>
           <div class="yellow_wand"></div>
@@ -76,6 +77,7 @@
       </div>
 
       <div class="center_content_block booking">
+        <a name="booking"></a>
         <img class="about_img booking_img" src="./images/about2.png" />
         <div class="book_a_table">
           <div class="subtitle black">BOOK A TABLE</div>
@@ -124,6 +126,7 @@
       </div>
 
       <div class="specialties">
+        <a name="events"></a>
         <div class="header_text specialties_text">specialties</div>
         <div class="center_content_block">
           <img class="about_img booking_img" src="./images/Rectangle.png" />
@@ -146,6 +149,7 @@
       </div>
 
       <div class="center_content_block">
+        <a name="contact"></a>
         <div class="contact_text_block">
           <div class="subtitle black">CONTACT</div>
           <div class="yellow_wand contact_wand"></div>
