--- a/second/index.html
+++ b/second/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width; initial-scale=1">
     <style>
       @import url("./src/css/global.css");
       @import url("./src/css/header.css");
@@ -19,7 +20,6 @@
 
   <body>
     <script>
-      // Initialize and add the map
       function initMap() {
         var uluru = { lat: 14.009454, lng: 120.996171 };
         var map = new google.maps.Map(document.getElementById("map"), {
@@ -34,17 +34,21 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASa6KEoHw0dqNh_llqOXFXZ3cwReYiP2U&callback=initMap"
     ></script>
-    <header class="header">
+    <header class="header" id="main-header">
       <img src="src/assets/image/name.svg" alt="sity" class="header__page-name" />
       <form class="header__input-form">
         <input type="text" class="header__input" placeholder="Find..."/>
         <select name="city" id="" class="header__city-selector"><option value="none" hidden="">New York</option></select>
       </form>
       <div class="header__interlayer"></div>
+      <nav class="header__links">
+        <img src="./src/assets/image/q (1).png" alt=""class="header__modile-icon" />
+        <img src="./src/assets/image/wfind.png" alt="" class="header__modile-icon"/>
         <a class="header__link"><img src="./src/assets/image/quest.png" alt="help" class="header__link-icon"></a><span class="header__link-name">Help</span>
         <a class="header__link"><img src="./src/assets/image/star.png" alt="favorits" class="header__link-icon"></a><span class="header__link-name">Favorites</span>
         <a class="header__link"><img src="./src/assets/image/shop.png" alt="cart" class="header__link-icon"></a><span class="header__link-name header__link-name_name_cart">Cart</span>
         <a class="header__link"><img src="./src/assets/image/user.png" alt="autorization" class="header__link-icon header__link-icon_name-reg-log"></a><span class="header__link-name header__link-name_name_log-reg">Log In | Register</span>
+      </nav>
       <nav class="sub-header">
         <button class="sub-header__button">TOURS</button>
         <button class="sub-header__button">ATTRACTIONS</button>
@@ -100,7 +104,7 @@
       </section>
     </aside>
 
-    <aside class="filter-block">
+    <aside class="filter-block" id="filter-block">
       <section class="filter-block__filters">
         <h2 class="filter-block__what-we-filter">Museums</h2>
         <button class="filter-block__button">Map</button>
@@ -110,34 +114,55 @@
         <select
           name="Subcategories"
           class="filter-block__selector filter-block__selector_name_subcategories"
-        ><option value="none" hidden="">Subcategories</option></select>
+        >
+          <option value="none" hidden="">Subcategories</option>
+          <option class="filter-block__option">Art</option>
+          <option class="filter-block__option">History</option>
+          <option class="filter-block__option">Outdoor</option>
+        </select>
         <div class="filter-block__interlayer2"></div>
         <select
           name="Neighborhoods"
           id=""
           class="filter-block__selector filter-block__selector_name_neighborhoods"
-        ><option value="none" hidden="">Neighborhoods</option></select>
+        >
+          <option value="none" hidden="">Neighborhoods</option>
+          <option >Flatiron</option>
+          <option >Chelsea</option>
+          <option >Outdoor</option>
+          <option >Art</option>
+          <option >History</option>
+        </select>
         <select
           name="Duration"
           id=""
           class="filter-block__selector filter-block__selector_name_duration"
-        ><option value="none" hidden="">Duration</option></select>
+        >
+          <option value="none" hidden="">Duration</option>
+          <option >Art</option>
+          <option >History</option>
+          <option >Outdoor</option>
+          <option >Art</option>
+        </select>
       </section>
     </aside>
 
     <section class="main-content">
-      <div class="main-content__sub-info"></div>
       <section class="results">
+        <div class="main-content__sub-info">
+            <span class="main-content__count-results">38 Results</span>
+            <button class="main-content__sort-button">Sort <img src="./src/assets/image/arr3.png" alt=">" class="main-content__sort-arrow"></button>
+        </div>
         <a href="" class="result">
           <img src="./src/assets/image/place.png" alt="musem" class="results_result__img">
           <h3 class="results_result__name">NYC Museum of Art</h3>
           <span class="results_result__price">from $26 per person</span>
         </a>
-        <a href="" class="result"><img src="./src/assets/image/place.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
+        <a href="" class="result"><img src="./src/assets/image/place3.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
           <span class="results_result__price">from $26 per person</span></a>
-        <a href="" class="result"><img src="./src/assets/image/place.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
+        <a href="" class="result"><img src="./src/assets/image/place1.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
           <span class="results_result__price">from $26 per person</span></a>
-        <a href="" class="result"><img src="./src/assets/image/place.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
+        <a href="" class="result"><img src="./src/assets/image/place2.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
           <span class="results_result__price">from $26 per person</span></a>
         <a href="" class="result"><img src="./src/assets/image/place.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
           <span class="results_result__price">from $26 per person</span></a>
@@ -162,7 +187,7 @@
         <a href="" class="result"><img src="./src/assets/image/place.png" alt="musem" class="results_result__img"><h3 class="results_result__name">NYC Museum of Art</h3>
           <span class="results_result__price">from $26 per person</span></a>
       </section>
-      <section class="map" id="map"></aside>
-      </section>
+      <section class="map-container" id="map-container"><div class="map" id="map"></div></section>
+    </section>
   </body>
 </html>
